--- a/config/database.yml
+++ b/config/database.yml
@@ -1,15 +1,17 @@
-# MySQL. Versions 4.1 and 5.0 are recommended.
+# MySQL.  Versions 4.1 and 5.0 are recommended.
 #
-# Install the MySQL driver:
-# gem install mysql2
+# Install the MYSQL driver
+#   gem install mysql2
+#
+# Ensure the MySQL gem is defined in your Gemfile
+#   gem 'mysql2'
 #
 # And be sure to use new-style password hashing:
-# http://dev.mysql.com/doc/refman/5.0/en/old-client.html
+#   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
   adapter: mysql2
   encoding: utf8
   database: beechbench_dev
-  reconnect: false
   pool: 5
   username: root
   password:
@@ -22,9 +24,16 @@ test:
   adapter: mysql2
   encoding: utf8
   database: beechbench_test
-  reconnect: false
   pool: 5
   username: root
   password:
   socket: /tmp/mysql.sock
 
+production:
+  adapter: mysql2
+  encoding: utf8
+  database: beechbench_production
+  pool: 5
+  username: root
+  password:
+  socket: /tmp/mysql.sock
